--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
   padding: 16px;
   border-radius: 20px;
   background-color: var(--white);
+  box-shadow: 0px 0px 10px #4cf23a33;
 }
 
 .qr-box img {
